--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,13 +12,16 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
-}
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  }
 
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
-  width: 48px;
+  min-width: 48px;
   height: 48px;
 }
 
@@ -29,6 +32,17 @@ body {
   font-style: italic;
 }
 
+.left-elements {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.right-elements {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+ }
 button {
   border: none;
   border-radius: 8px;
@@ -45,4 +59,8 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
 }
