--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -5,7 +5,7 @@ body, html {
 
 .container {
   text-align: center;
-  height: 100%;
+  min-height: 100%;
   padding: 16px;
   box-sizing: border-box;
 }
@@ -47,4 +47,13 @@ body, html {
 .footer {
   background-color: #393f4d;
   grid-column: 1 / 3;
+}
+
+/* NE SOLUTION */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(2, 1fr) 5fr 1fr;
+  gap: 15px;
 }
