--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,72 @@
   font-size: 13px;
   font-weight: normal;  
 }
+
+
+/* NE SOLUTION */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 100px 50px 1fr 50px;
+  gap: 4px;
+}
+
+.header {
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: minmax(250px,1fr) 3fr;
+  justify-items: start;
+  align-items: center;
+}
+
+.menu {
+  width: 100%;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  justify-content: space-between;
+}
+
+.sidebar {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+  display: grid;
+  grid-template-columns: minmax(250px,1fr);
+  gap: 50px;
+}
+
+.sidebar div {
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center;
+}
+
+.nav {
+  grid-column: 2 / 3;
+}
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+
+.article {
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  gap: 15px;
+}
+
+.card {
+  height: 200px;
+}
+
+.footer {
+  grid-column: 1 / 3;
+}
+
+li {
+  list-style-type: none;
+}
